# imogen

./: .gitignore  README.md  TODO.txt  grammar.lark  imogen.img  pyproject.toml
examples/: demo.img  flag_se.img  gradient.img  random_colors.img  shapes.img
imogen/: cli.py  grammar.lark  imogen.py  objs.py  parser.py  render.py
tests/: demo.img  flag_se.img  flags.img  fntest.img  house.img  other  test.img
